--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,8 @@ a {
   --color-white: #ffffff;
   --color-link-footer: #ffffff99;
   --background-color: #2f303a;
+  --color-filters-button: #f5f4fa;
+  --color-projects-border: #eeeeee;
 }
 /* #endregion */
 
@@ -57,6 +59,9 @@ a {
 
 /* #region HEADER */
 
+.header--line {
+  border-bottom: 1px solid #ececec;
+}
 .header__content {
   display: flex;
 }
@@ -138,6 +143,10 @@ a {
   color: var(--color-white);
 }
 
+.contacts__link--footer:nth-child(1):hover {
+  color: var(--color-blue);
+}
+
 /* #endregion */
 
 /* #region LOGO */
@@ -159,6 +168,7 @@ a {
 .logo--footer {
   color: var(--color-white);
 }
+
 /* #endregion */
 
 /* #region SECTION */
@@ -333,4 +343,93 @@ a {
 .footer__logo {
   margin: 0 0 20px;
 }
+/* #endregion */
+
+/* #region FILTERS */
+.filters {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+
+  height: 54px;
+}
+
+.filters__button {
+  padding: 6px 22px;
+
+  line-height: 26px;
+
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 0.03em;
+
+  background-color: var(--color-filters-button);
+
+  border: none;
+  border-radius: 4px;
+
+  transition: 200ms;
+}
+
+.filters__button:hover,
+.filters__button--active {
+  color: var(--color-white);
+  background-color: var(--color-blue);
+
+  box-shadow: 0px 2px 2px 0px #0000001f;
+  box-shadow: 0px 1px 2px 0px #00000014;
+  box-shadow: 0px 3px 1px 0px #0000001a;
+}
+
+/* #endregion*/
+
+/* #region PROJECTS */
+
+.projects__filters {
+  margin-bottom: 34px;
+}
+
+.projects__list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
+/* #endregion*/
+
+/* #region PROJECT */
+
+.project {
+  display: flex;
+  flex-direction: column;
+}
+
+.project__image {
+  width: 370px;
+}
+
+.project__info {
+  padding: 20px 24px;
+
+  border: 1px solid var(--color-projects-border);
+  border-top: none;
+}
+
+.project__name {
+  line-height: 36px;
+
+  font-size: 18px;
+  font-weight: 700;
+  letter-spacing: 0.06em;
+}
+
+.project__description {
+  line-height: 30px;
+
+  font-size: 16px;
+  letter-spacing: 0.03em;
+
+  color: var(--color-grey);
+}
+
 /* #endregion */
