--- a/css/styles.css
+++ b/css/styles.css
@@ -393,3 +393,40 @@ a {
 }
 
 /* #endregion*/
+
+/* #region PROJECT */
+
+.project {
+  display: flex;
+  flex-direction: column;
+}
+
+.project__image {
+  width: 370px;
+}
+
+.project__info {
+  padding: 20px 24px;
+
+  border: 1px solid var(--color-projects-border);
+  border-top: none;
+}
+
+.project__name {
+  line-height: 36px;
+
+  font-size: 18px;
+  font-weight: 700;
+  letter-spacing: 0.06em;
+}
+
+.project__description {
+  line-height: 30px;
+
+  font-size: 16px;
+  letter-spacing: 0.03em;
+
+  color: var(--color-grey);
+}
+
+/* #endregion */
